index.css
@font-face {
    font-family: "Fira Regular";
    src: url("font/FiraMono-Regular.ttf");
}

html, body {
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #1c1c1c;
}

h1, h2, p {
    font-family: "Fira Regular", serif;
    cursor: default;
}

.block {
    transform: skewX(-30deg);
    width: 50vw;
    height: 100vh;
    position: absolute;
    top: 0;
    color: whitesmoke;
    transition: transform linear 400ms;
    cursor: pointer;
    opacity: 0;
    background-size: cover;
    background-position: center;


    animation: fadeIn;
    animation-duration: 500ms;
    animation-delay: 250ms;
    animation-timing-function: linear;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

.block:before {
    content: "";
    width: 100%;
    height: 100%;
    display: block;
    transform-origin: right;
    background-color: rgba(21, 21, 21, 0.9);
    position: relative;
    transform: scaleX(1);
    transition: transform linear 300ms;
}

.block:hover h1 {
    transform: skewX(30deg) scale(1.2);
}

.block:hover:before {
    transform: scaleX(0);
}

.block h1 {
    transform: skewX(30deg);
    text-shadow: 0 0 5px #1c1c1c;
    line-height: 100vh;
    text-align: center;
    position: absolute;
    transition: transform linear 300ms;
    left: 0;
    top: 0;
    width: 100%;
    z-index: 9999;
    cursor: pointer;
}

.block.simple {
    left: 0;
    background-image: url("./img/simple.png");
}

.block.advanced {
    left: 50vw;
    background-image: url("./img/advanced.png");
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@media only screen and (max-width: 1200px) {
    .block h1 span {
        display: none;
    }
}

